# src/controllers/serializers/metricas.serializer.js
@@ -3,14 +3,13 @@ import { z } from "zod"
 
 export const registrarMetricaSerializer = z.object({
     
-    metrica: z.number(),
-      medida: z.number(),
+      metrica: z.number(),
+      medida: z.string(),
       vol_bbls: z.number(),
   
   });
 
   export const actulizarMetricaSerializer = z.object({
     
-    medida: z.number(),
     vol_bbls: z.number(),
   })
